# zeromq-patterns

./: README.md  pyproject.toml
basic/: client.py  server.py
pair/: pair_follower.py  pair_master.py
pipeline/: manager.py  worker.py
pipeline-grid/: collector.py  consumer.py  producer.py
pub_sub/: pub.py  sub.py
queue-device/: client.py  device.py  server.py
sync-async-service-pipeline/: Dockerfile  async.py  docker-compose.yml  pyproject.toml  sync.py
